initial commit
# Conflicts:
#	Dockerfile
#	README.md
#	docker-compose.yml
#	src/main/java/com/hotel/search/application/port/in/CountUseCase.java
#	src/main/java/com/hotel/search/application/port/in/SearchUseCase.java
#	src/main/java/com/hotel/search/application/port/out/SearchEventPublisher.java
#	src/main/java/com/hotel/search/application/port/out/SearchRepository.java
#	src/main/java/com/hotel/search/application/service/CountService.java
#	src/main/java/com/hotel/search/domain/model/Search.java
#	src/main/java/com/hotel/search/infrastructure/adapter/in/rest/controller/GlobalExceptionHandler.java
#	src/main/java/com/hotel/search/infrastructure/adapter/in/rest/dto/SearchRequestDTO.java
#	src/main/java/com/hotel/search/infrastructure/adapter/in/rest/dto/SearchResponseDTO.java
#	src/main/java/com/hotel/search/infrastructure/adapter/in/rest/mapper/SearchRestMapper.java
#	src/main/java/com/hotel/search/infrastructure/adapter/in/rest/validation/CheckInBeforeCheckOutValidator.java
#	src/main/java/com/hotel/search/infrastructure/adapter/out/kafka/consumer/KafkaSearchConsumer.java
#	src/main/java/com/hotel/search/infrastructure/adapter/out/persistence/adapter/SearchRepositoryAdapter.java
#	src/main/java/com/hotel/search/infrastructure/adapter/out/persistence/entity/SearchEntity.java
#	src/main/java/com/hotel/search/infrastructure/adapter/out/persistence/mapper/SearchPersistenceMapper.java
#	src/main/java/com/hotel/search/infrastructure/adapter/out/persistence/repository/JpaSearchRepository.java
#	src/main/java/com/hotel/search/infrastructure/config/KafkaConfig.java
#	src/main/resources/application.yml
#	src/test/java/com/hotel/search/application/service/CountServiceTest.java
#	src/test/java/com/hotel/search/infrastructure/adapter/in/rest/controller/SearchControllerTest.java
#	src/test/java/com/hotel/search/infrastructure/adapter/out/persistence/SearchRepositoryAdapterTest.java